# routes-scraper

./: Cargo.toml  README.md
src/: backend.rs  frontend.rs  lib.rs  main.rs  parsing_utils.rs  serialize.rs
src/backend/: app.rs  route_handlers.rs
src/frontend/: component.rs  constants.rs  service.rs
test_data/backend/: app.js
test_data/backend/src/routes/: analysisRoutes.js  authRoutes.js  causalRoutes.js  clientRoutes.js  contentRoutes.js  contractRoutes.js  departmentRoutes.js  feedbackRoutes.js  fileUploadRoutes.js  financeRoutes.js  forecastRoutes.js  geoRoutes.js  goalRoutes.js  googleAnalyticsRoutes.js  googleRoutes.js  hiringRoutes.js  jiraRoutes.js  keywordRoutes.js  mailerRoutes.js  ngramRoutes.js  notificationRoutes.js  otherRoutes.js  platformRoutes.js  projectRoutes.js  reportRoutes.js  resourcesRoutes.js  reviewsRoutes.js  roleRoutes.js  scopeRoutes.js  skillRoutes.js  tagRoutes.js  teamRoutes.js  userRoutes.js
test_data/frontend/: app-routing.module.ts  app.component.html  app.component.scss  app.component.spec.ts  app.component.ts  app.module.ts  file.util.ts  globalConstants.ts  utils.ts
test_data/frontend/causal-impact/: causal-impact.component.html  causal-impact.component.scss  causal-impact.component.ts  causal.service.ts  constants.ts
test_data/frontend/causal-outputs/: causal-outputs.component.html  causal-outputs.component.scss  causal-outputs.component.ts
test_data/frontend/client-reports/: client-reports.component.html  client-reports.component.scss  client-reports.component.ts  client-reports.service.ts  constants.ts
